--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,18 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="https://res.cloudinary.com/mimino/image/upload/v1663767590/ELAN/bg_jn9vdz.png"
+      href="https://res.cloudinary.com/mimino/image/upload/v1677670399/pngtree-vector-star-icon-png-image_516104-removebg-preview_ioggfx.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FCFDFF" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Discover the full dimension of your beauty"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/mimino/image/upload/v1677670399/pngtree-vector-star-icon-png-image_516104-removebg-preview_ioggfx.png"
+    />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -27,6 +30,7 @@
       };
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxx8CORlQQBBkbGc-F0yu95DMZaiJkMmo&libraries=places&callback=myCallbackFunc"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBxx8CORlQQBBkbGc-F0yu95DMZaiJkMmo&libraries=places&sensor=false&language=en-EN"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
