--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FCFDFF" />
-    <meta name="description" content="Discover the full dimension of your beauty" />
+    <meta
+      name="description"
+      content="Discover the full dimension of your beauty"
+    />
     <link
       rel="apple-touch-icon"
       href="https://res.cloudinary.com/mimino/image/upload/v1677670399/pngtree-vector-star-icon-png-image_516104-removebg-preview_ioggfx.png"
@@ -27,7 +30,7 @@
       };
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxx8CORlQQBBkbGc-F0yu95DMZaiJkMmo&libraries=places&callback=myCallbackFunc"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxx8CORlQQBBkbGc-F0yu95DMZaiJkMmo&libraries=places&sensor=false&language=en-EN"></script>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
