--- a/public/index.html
+++ b/public/index.html
@@ -29,17 +29,6 @@
         window.initTwo && window.initTwo();
       };
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxx8CORlQQBBkbGc-F0yu95DMZaiJkMmo&libraries=places&callback=myCallbackFunc"></script>
-
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxx8CORlQQBBkbGc-F0yu95DMZaiJkMmo&libraries=places&language=en&callback=myCallbackFunc"></script>
   </body>
 </html>
