--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" sizes="16x16" />
+    <!-- Favicon -->
+    <link rel="icon" href="/assets/logo.png" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Your Beauty Universe!" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <meta name="description" content="Your Beauty World!" />
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="/assets/logo.png" />
+    <!-- Manifest File -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
       body {
