--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <!-- Favicon -->
-    <link rel="icon" href="/assets/logo.png" sizes="16x16" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Your Beauty World!" />
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="/assets/logo.png" />
+    <link rel="apple-touch-icon" href="../src/assets/logo.png" />
     <!-- Manifest File -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
